hphp/hack/test/typecheck/defined/conditional.php.exp
File "conditional.php", line 5, characters 10-11:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
